# ignite

./: .gitignore  Cargo.toml  README.md
plans/: guidelines.md
src/: api.rs  main.rs  mcp.rs  tests.rs
src/common/: error.rs
src/db/: surreal.rs
src/embedding/: client.rs
src/memory/: model.rs  repository.rs  service.rs
